--- a/WorkerAcoes/appsettings.json
+++ b/WorkerAcoes/appsettings.json
@@ -1,11 +1,13 @@
 {
+  "MongoDBConnection": "",
   "MongoDatabase": "DBAcoes",
   "MongoCollection": "HistoricoAcoes",
   "ApacheKafka": {
-    "GroupId": "WorkerAcoes"
-  },
-  "ConnectionStrings": {
-    "AppConfiguration": ""
+    "Broker": "",
+    "Topic": "topic-acoes5",
+    "GroupId": "WorkerAcoes",
+    "Username": "$ConnectionString",
+    "Password": ""
   },
   "Logging": {
     "LogLevel": {
