--- a/WorkerAcoes/appsettings.json
+++ b/WorkerAcoes/appsettings.json
@@ -4,7 +4,7 @@
   "MongoCollection": "HistoricoAcoes",
   "ApacheKafka": {
     "Broker": "",
-    "Topic": "topic-acoes5",
+    "Topic": "topic-acoes",
     "GroupId": "WorkerAcoes",
     "Username": "$ConnectionString",
     "Password": ""
