--- a/WorkerAcoes.IntegrationTests/appsettings.json
+++ b/WorkerAcoes.IntegrationTests/appsettings.json
@@ -1,11 +1,11 @@
 {
-    "IntervaloProcessamento": 2000,
+    "IntervaloProcessamento": 5000,
     "MongoDBConnection": "",
     "MongoDatabase": "DBAcoes",
     "MongoCollection": "HistoricoAcoes",
     "ApacheKafka": {
       "Broker": "",
-      "Topic": "topic-acoes5",
+      "Topic": "topic-acoes",
       "GroupId": "WorkerAcoes"
     }
 }
