--- a/WorkerAcoes/appsettings.json
+++ b/WorkerAcoes/appsettings.json
@@ -6,7 +6,7 @@
     "Broker": "",
     "Topic": "topic-acoes",
     "GroupId": "WorkerAcoes",
-    "Username": "$ConnectionString",
+    "Username": "",
     "Password": ""
   },
   "Logging": {
