--- a/.github/workflows/aks-acr-integratedtests.yml
+++ b/.github/workflows/aks-acr-integratedtests.yml
@@ -62,7 +62,14 @@ jobs:
       uses: actions/setup-dotnet@v1.7.2
       with:
         dotnet-version: 5.0.202
-        
+
+    - name: Executar a aplicação a ser testada
+      run: |
+        dotnet publish ${{ env.PATH_PROJETO }} -c Release -o app
+        cd ./app
+        ls
+        nohup dotnet WorkerAcoes.dll
+
     - name: Build de imagem
       run: |
         docker network ls
