--- a/.github/workflows/aks-acr-integratedtests.yml
+++ b/.github/workflows/aks-acr-integratedtests.yml
@@ -11,7 +11,7 @@ env:
   NOME_IMAGEM: workeracoeskafka
   PATH_PROJETO: ./WorkerAcoes
   PATH_PROJETO_TESTES: ./WorkerAcoes.IntegrationTests
-  PATH_LOG_EXECUCAO_WORKERACOES: ./log-execucao-workeracoes.txt
+  FILE_LOG_EXECUCAO_WORKERACOES: log-execucao-workeracoes.txt
   AZURE_RESOURCE_GROUP_K8S: TesteKubernetes
   AZURE_CLUSTER_K8S: AKSCluster
   NAMESPACE_K8S: workeracoesgha
@@ -69,7 +69,7 @@ jobs:
         dotnet publish ${{ env.PATH_PROJETO }} -c Release -o app
         cd ./app
         sleep 20s
-        nohup dotnet WorkerAcoes.dll > log-execucao-workeracoes.txt 2>&1 &
+        nohup dotnet WorkerAcoes.dll > ${{ env.FILE_LOG_EXECUCAO_WORKERACOES }} 2>&1 &
         sleep 10s
         ls
 
@@ -83,7 +83,7 @@ jobs:
       if: always()
       with:
         name: log-execucao-workeracoes
-        path: ${{ env.PATH_LOG_EXECUCAO_WORKERACOES }}
+        path: ./app/${{ env.PATH_LOG_EXECUCAO_WORKERACOES }}
         retention-days: 30
 
     - name: Upload como Artifact do Report de Testes
